Being able to view log.

--- a/DigitalDiary/App.config
+++ b/DigitalDiary/App.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 	<connectionStrings>
-		<add name="DigitalDiary" providerName="System.Data.SqlClient" connectionString="server=.\sqlexpress;database=DigitalDiary;integrated security=true;"/>
-	</connectionStrings>
+  <add name="DigitalDiary" connectionString="server=.\sqlexpress;database=DigitalDiary;integrated security=true;"
+   providerName="System.Data.SqlClient" />
+  <add name="DigitalDiary.Properties.Settings.DigitalDiaryConnectionString"
+   connectionString="Data Source=.\sqlexpress;Initial Catalog=DigitalDiary;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
